[project]
name = "lexiguard-env"
version = "0.1.0"
description = "LexiGuard OpenEnv environment for legal contract analysis"
authors = [{ name = "Nikhil Eshwar" }]
requires-python = ">=3.10"

dependencies = [
    "pydantic==2.6.4",
    "openai>=2.7.2",
    "pyyaml==6.0.1",
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "httpx==0.27.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"